--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -59,12 +59,14 @@
     <Compile Include="Maps\CL_MTCJBXX_Map.cs" />
     <Compile Include="Maps\CL_ZXCDDCSLCJBXX_Map.cs" />
     <Compile Include="Maps\CODES_CL_Map.cs" />
+    <Compile Include="Maps\CODES_CW_Map.cs" />
     <Compile Include="Maps\CODES_ES_JDJJBG_Map.cs" />
     <Compile Include="Maps\CODES_FC_Map.cs" />
     <Compile Include="Maps\CODES_ES_MYFZMR_Map.cs" />
     <Compile Include="Maps\CODES_ES_SJSM_Map.cs" />
     <Compile Include="Maps\CODES_ES_QTES_Map.cs" />
     <Compile Include="Maps\CODES_ES_WHYL_Map.cs" />
+    <Compile Include="Maps\CW_CWGJBXX_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
     <Compile Include="Maps\ES_JDJJBG_BGSBJBXX_Map.cs" />
@@ -107,6 +109,7 @@
     <Compile Include="Models\CL_HCJBXX.cs" />
     <Compile Include="Models\CL_KCJBXX.cs" />
     <Compile Include="Models\CL_MTCJBXX.cs" />
+    <Compile Include="Models\CODES_CW.cs" />
     <Compile Include="Models\CODES_FC.cs" />
     <Compile Include="Models\CODES_CL.cs" />
     <Compile Include="Models\CODES_ES_JDJJBG.cs" />
@@ -114,6 +117,7 @@
     <Compile Include="Models\CODES_ES_SJSM.cs" />
     <Compile Include="Models\CODES_ES_QTES.cs" />
     <Compile Include="Models\CODES_ES_WHYL.cs" />
+    <Compile Include="Models\CW_CWGJBXX.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
