--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -54,6 +54,8 @@
     <Compile Include="ICL_MTCBLL.cs" />
     <Compile Include="ICommonBLL.cs" />
     <Compile Include="ICW_CWGBLL.cs" />
+    <Compile Include="ICW_CWMBLL.cs" />
+    <Compile Include="ICW_HNYCBLL.cs" />
     <Compile Include="IDAO.cs" />
     <Compile Include="ICL_ZXCDDCSLCBLL.cs" />
     <Compile Include="IES_JDJJBG_BGSBBLL.cs" />
