--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -60,6 +60,8 @@
     <Compile Include="BLL\CommonBLL.cs" />
     <Compile Include="BLL\CL_ZXCDDCSLCBLL.cs" />
     <Compile Include="BLL\CW_CWGBLL.cs" />
+    <Compile Include="BLL\CW_CWMBLL.cs" />
+    <Compile Include="BLL\CW_HNYCBLL.cs" />
     <Compile Include="BLL\ES_JDJJBG_BGSBBLL.cs" />
     <Compile Include="BLL\ES_JDJJBG_ESJDBLL.cs" />
     <Compile Include="BLL\ES_JDJJBG_ESJJBLL.cs" />
