--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -169,6 +169,7 @@
     <Content Include="Areas\Business\Css\Common\XZQ.css" />
     <Content Include="Areas\Business\Css\CW\CW_CWG.css" />
     <Content Include="Areas\Business\Css\CW\CW_CWM.css" />
+    <Content Include="Areas\Business\Css\CW\CW_CWZSLY.css" />
     <Content Include="Areas\Business\Css\CW\CW_HNYC.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_BGSB.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_ESJD.css" />
@@ -384,6 +385,8 @@
     <Content Include="Areas\Business\Scripts\Business\CW\CW_CWGYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CW\CW_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\CW\CW_CWMYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CW\CW_CWZSLY.js" />
+    <Content Include="Areas\Business\Scripts\Business\CW\CW_CWZSLYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CW\CW_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\CW\CW_HNYCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_BGSB.js" />
@@ -794,6 +797,7 @@
     <Compile Include="Areas\Business\Controllers\CW\CW_CWGController.cs" />
     <Compile Include="Areas\Business\Controllers\CW\CW_CWMController.cs" />
     <Compile Include="Areas\Business\Controllers\CW\CW_HNYCController.cs" />
+    <Compile Include="Areas\Business\Controllers\CW\CW_CWZSLYController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_BGSBController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJDController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJJController.cs" />
@@ -969,6 +973,7 @@
     <Content Include="Areas\Business\Views\CW_CWG\CW_CWG.cshtml" />
     <Content Include="Areas\Business\Views\CW_CWM\CW_CWM.cshtml" />
     <Content Include="Areas\Business\Views\CW_HNYC\CW_HNYC.cshtml" />
+    <Content Include="Areas\Business\Views\CW_CWZSLY\CW_CWZSLY.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
