--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ICommonBLL.cs" />
     <Compile Include="ICW_CWGBLL.cs" />
     <Compile Include="ICW_CWMBLL.cs" />
+    <Compile Include="ICW_CWYPSPBLL.cs" />
     <Compile Include="ICW_CWZSLYBLL.cs" />
     <Compile Include="ICW_HNYCBLL.cs" />
     <Compile Include="IDAO.cs" />
