--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Maps\CODES\CODES_ES_SJSM_Map.cs" />
     <Compile Include="Maps\CODES\CODES_ES_QTES_Map.cs" />
     <Compile Include="Maps\CODES\CODES_ES_WHYL_Map.cs" />
+    <Compile Include="Maps\CODES\CODES_PWKQ_Map.cs" />
     <Compile Include="Maps\CW\CW_CWFWJBXX_Map.cs" />
     <Compile Include="Maps\CW\CW_CWGJBXX_Map.cs" />
     <Compile Include="Maps\CW\CW_CWMJBXX_Map.cs" />
@@ -102,7 +103,8 @@
     <Compile Include="Maps\FWCZJBXX_Map.cs" />
     <Compile Include="Maps\JCXX_Map.cs" />
     <Compile Include="Maps\PHOTOS_Map.cs" />
-    <Compile Include="Maps\PWKQ_DYPJBXX_Map.cs" />
+    <Compile Include="Maps\PWKQ\PWKQ_DYPJBXX_Map.cs" />
+    <Compile Include="Maps\PWKQ\PWKQ_YCMPJBXX_Map.cs" />
     <Compile Include="Maps\SZMX_Map.cs" />
     <Compile Include="Maps\WZJY_Map.cs" />
     <Compile Include="Maps\XQJBXX_Map.cs" />
@@ -127,6 +129,7 @@
     <Compile Include="Models\CODES\CODES_ES_SJSM.cs" />
     <Compile Include="Models\CODES\CODES_ES_QTES.cs" />
     <Compile Include="Models\CODES\CODES_ES_WHYL.cs" />
+    <Compile Include="Models\CODES\CODES_PWKQ.cs" />
     <Compile Include="Models\CW\CW_CWFWJBXX.cs" />
     <Compile Include="Models\CW\CW_CWGJBXX.cs" />
     <Compile Include="Models\CW\CW_CWMJBXX.cs" />
@@ -164,7 +167,8 @@
     <Compile Include="Models\JCXX.cs" />
     <Compile Include="Models\PHOTOS.cs" />
     <Compile Include="Models\PublicType.cs" />
-    <Compile Include="Models\PWKQ_DYPJBXX.cs" />
+    <Compile Include="Models\PWKQ\PWKQ_DYPJBXX.cs" />
+    <Compile Include="Models\PWKQ\PWKQ_YCMPJBXX.cs" />
     <Compile Include="Models\SZMX.cs" />
     <Compile Include="Models\WZYJ.cs" />
     <Compile Include="Models\XQJBXX.cs" />
