--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -88,7 +88,6 @@
     <Compile Include="FC\IFC_ZZFJBXXBLL.cs" />
     <Compile Include="IHFCZBLL.cs" />
     <Compile Include="ILBXXBLL.cs" />
-    <Compile Include="IPWKQ_DYPBLL.cs" />
     <Compile Include="IRZGLBLL.cs" />
     <Compile Include="IWDFBBLL.cs" />
     <Compile Include="IWDSCBLL.cs" />
@@ -101,6 +100,8 @@
     <Compile Include="IYXCZBLL.cs" />
     <Compile Include="IZHBDBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PWKQ\IPWKQ_DYPBLL.cs" />
+    <Compile Include="PWKQ\IPWKQ_YCMPZLBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TianWen.XiaoZhen1Qu.Entities\TianWen.XiaoZhen1Qu.Entities.csproj">
