--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Maps\CODES\CODES_CL_JC_Map.cs" />
     <Compile Include="Maps\CODES\CODES_CL_Map.cs" />
     <Compile Include="Maps\CODES\CODES_CW_Map.cs" />
+    <Compile Include="Maps\CODES\CODES_CY_Map.cs" />
     <Compile Include="Maps\CODES\CODES_ES_JDJJBG_Map.cs" />
     <Compile Include="Maps\CODES\CODES_FC_Map.cs" />
     <Compile Include="Maps\CODES\CODES_ES_MYFZMR_Map.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Maps\CW\CW_CWYPSPJBXX_Map.cs" />
     <Compile Include="Maps\CW\CW_CWZSLYJBXX_Map.cs" />
     <Compile Include="Maps\CW\CW_HNYCJBXX_Map.cs" />
+    <Compile Include="Maps\CY\CY_MSJBXX_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
     <Compile Include="Maps\ES\ES_JDJJBG_BGSBJBXX_Map.cs" />
@@ -125,6 +127,7 @@
     <Compile Include="Models\CL\CL_MTCJBXX.cs" />
     <Compile Include="Models\CODES\CODES_CL_JC.cs" />
     <Compile Include="Models\CODES\CODES_CW.cs" />
+    <Compile Include="Models\CODES\CODES_CY.cs" />
     <Compile Include="Models\CODES\CODES_FC.cs" />
     <Compile Include="Models\CODES\CODES_CL.cs" />
     <Compile Include="Models\CODES\CODES_ES_JDJJBG.cs" />
@@ -139,6 +142,7 @@
     <Compile Include="Models\CW\CW_CWYPSPJBXX.cs" />
     <Compile Include="Models\CW\CW_CWZSLYJBXX.cs" />
     <Compile Include="Models\CW\CW_HNYCJBXX.cs" />
+    <Compile Include="Models\CY\CY_MSJBXX.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
