--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -174,6 +174,7 @@
     <Content Include="Areas\Business\Css\CW\CW_CWYPSP.css" />
     <Content Include="Areas\Business\Css\CW\CW_CWZSLY.css" />
     <Content Include="Areas\Business\Css\CW\CW_HNYC.css" />
+    <Content Include="Areas\Business\Css\CY\CY_MS.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_BGSB.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_ESJD.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_ESJJ.css" />
@@ -403,6 +404,8 @@
     <Content Include="Areas\Business\Scripts\Business\CW\CW_CWZSLYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CW\CW_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\CW\CW_HNYCYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CY\CY_MS.js" />
+    <Content Include="Areas\Business\Scripts\Business\CY\CY_MSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_BGSB.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_BGSBYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_ESJD.js" />
@@ -777,8 +780,12 @@
     <Content Include="Areas\Business\Scripts\UEditor\ueditor.js" />
     <Content Include="Areas\Business\Scripts\UEditor\ueditor.parse.min.js" />
     <Content Include="Areas\Business\Scripts\underscore.min.js" />
+    <Content Include="Config\SpringConfig\BLLCY.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Config\SpringConfig\BLLPWKQ.xml" />
     <Content Include="Config\SpringConfig\BLLGY.xml" />
+    <Content Include="Config\SpringConfig\ControllersCY.xml" />
     <Content Include="Config\SpringConfig\ControllersCL.xml" />
     <Content Include="Config\SpringConfig\ControllersGY.xml" />
     <Content Include="Config\SpringConfig\ControllersPWKQ.xml">
@@ -829,6 +836,7 @@
     <Compile Include="Areas\Business\Controllers\CW\CW_CWYPSPController.cs" />
     <Compile Include="Areas\Business\Controllers\CW\CW_HNYCController.cs" />
     <Compile Include="Areas\Business\Controllers\CW\CW_CWZSLYController.cs" />
+    <Compile Include="Areas\Business\Controllers\CY\CY_MSController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_BGSBController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJDController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJJController.cs" />
@@ -1018,6 +1026,7 @@
     <Content Include="Areas\Business\Views\PWKQ_YLYJDP\PWKQ_YLYJDP.cshtml" />
     <Content Include="Areas\Business\Views\PWKQ_XFKGWQ\PWKQ_XFKGWQ.cshtml" />
     <Content Include="Areas\Business\Views\PWKQ_QTKQ\PWKQ_QTKQ.cshtml" />
+    <Content Include="Areas\Business\Views\CY_MS\CY_MS.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
