--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Maps\CW\CW_CWYPSPJBXX_Map.cs" />
     <Compile Include="Maps\CW\CW_CWZSLYJBXX_Map.cs" />
     <Compile Include="Maps\CW\CW_HNYCJBXX_Map.cs" />
+    <Compile Include="Maps\CY\CY_KCTSJBXX_Map.cs" />
     <Compile Include="Maps\CY\CY_MSJBXX_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
@@ -142,6 +143,7 @@
     <Compile Include="Models\CW\CW_CWYPSPJBXX.cs" />
     <Compile Include="Models\CW\CW_CWZSLYJBXX.cs" />
     <Compile Include="Models\CW\CW_HNYCJBXX.cs" />
+    <Compile Include="Models\CY\CY_KCTSJBXX.cs" />
     <Compile Include="Models\CY\CY_MSJBXX.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
