--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -174,6 +174,7 @@
     <Content Include="Areas\Business\Css\CW\CW_CWYPSP.css" />
     <Content Include="Areas\Business\Css\CW\CW_CWZSLY.css" />
     <Content Include="Areas\Business\Css\CW\CW_HNYC.css" />
+    <Content Include="Areas\Business\Css\CY\CY_KCTS.css" />
     <Content Include="Areas\Business\Css\CY\CY_MS.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_BGSB.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_ESJD.css" />
@@ -404,6 +405,8 @@
     <Content Include="Areas\Business\Scripts\Business\CW\CW_CWZSLYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CW\CW_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\CW\CW_HNYCYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CY\CY_KCTS.js" />
+    <Content Include="Areas\Business\Scripts\Business\CY\CY_KCTSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CY\CY_MS.js" />
     <Content Include="Areas\Business\Scripts\Business\CY\CY_MSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_BGSB.js" />
@@ -836,6 +839,7 @@
     <Compile Include="Areas\Business\Controllers\CW\CW_CWYPSPController.cs" />
     <Compile Include="Areas\Business\Controllers\CW\CW_HNYCController.cs" />
     <Compile Include="Areas\Business\Controllers\CW\CW_CWZSLYController.cs" />
+    <Compile Include="Areas\Business\Controllers\CY\CY_KCTSController.cs" />
     <Compile Include="Areas\Business\Controllers\CY\CY_MSController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_BGSBController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJDController.cs" />
@@ -1027,6 +1031,7 @@
     <Content Include="Areas\Business\Views\PWKQ_XFKGWQ\PWKQ_XFKGWQ.cshtml" />
     <Content Include="Areas\Business\Views\PWKQ_QTKQ\PWKQ_QTKQ.cshtml" />
     <Content Include="Areas\Business\Views\CY_MS\CY_MS.cshtml" />
+    <Content Include="Areas\Business\Views\CY_KCTS\CY_KCTS.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
