--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Maps\CW\CW_HNYCJBXX_Map.cs" />
     <Compile Include="Maps\CY\CY_KCTSJBXX_Map.cs" />
     <Compile Include="Maps\CY\CY_MSJBXX_Map.cs" />
+    <Compile Include="Maps\CY\CY_WMJBXX_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
     <Compile Include="Maps\ES\ES_JDJJBG_BGSBJBXX_Map.cs" />
@@ -145,6 +146,7 @@
     <Compile Include="Models\CW\CW_HNYCJBXX.cs" />
     <Compile Include="Models\CY\CY_KCTSJBXX.cs" />
     <Compile Include="Models\CY\CY_MSJBXX.cs" />
+    <Compile Include="Models\CY\CY_WMJBXX.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
