--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -341,6 +341,8 @@
     <Content Include="Areas\Business\Css\WZCX\WZCX.css" />
     <Content Include="Areas\Business\Css\XXGL\XXGL.css" />
     <Content Include="Areas\Business\Css\XXGL\XXGLMX.css" />
+    <Content Include="Areas\Business\Css\XXYL\XXYL_YDJB.css" />
+    <Content Include="Areas\Business\Css\XXYL\XXYL_YDJS.css" />
     <Content Include="Areas\Business\Css\YHDLXX.css" />
     <Content Include="Areas\Business\Css\YHGL.css" />
     <Content Include="Areas\Business\Css\YXCZ\YXCZ.css" />
@@ -487,6 +489,10 @@
     <Content Include="Areas\Business\Scripts\Business\WZCX\WZCX.js" />
     <Content Include="Areas\Business\Scripts\Business\XXGL\XXGL.js" />
     <Content Include="Areas\Business\Scripts\Business\XXGL\XXGLMX.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXYL\XXYL_YDJB.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXYL\XXYL_YDJBYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXYL\XXYL_YDJS.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXYL\XXYL_YDJSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\YHDLXX.js" />
     <Content Include="Areas\Business\Scripts\Business\YHGL.js" />
     <Content Include="Areas\Business\Scripts\Business\YHJBXX.js" />
@@ -789,8 +795,10 @@
     <Content Include="Config\SpringConfig\BLLCY.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Config\SpringConfig\BLLXXYL.xml" />
     <Content Include="Config\SpringConfig\BLLPWKQ.xml" />
     <Content Include="Config\SpringConfig\BLLGY.xml" />
+    <Content Include="Config\SpringConfig\ControllersXXYL.xml" />
     <Content Include="Config\SpringConfig\ControllersCY.xml" />
     <Content Include="Config\SpringConfig\ControllersCL.xml" />
     <Content Include="Config\SpringConfig\ControllersGY.xml" />
@@ -884,6 +892,8 @@
     <Compile Include="Areas\Business\Controllers\WDXJController.cs" />
     <Compile Include="Areas\Business\Controllers\WZCXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXGLController.cs" />
+    <Compile Include="Areas\Business\Controllers\XXYL\XXYL_YDJBController.cs" />
+    <Compile Include="Areas\Business\Controllers\XXYL\XXYL_YDJSController.cs" />
     <Compile Include="Areas\Business\Controllers\YHDLXXController.cs" />
     <Compile Include="Areas\Business\Controllers\YHGLController.cs" />
     <Compile Include="Areas\Business\Controllers\YHJBXXController.cs" />
@@ -1037,6 +1047,8 @@
     <Content Include="Areas\Business\Views\CY_MS\CY_MS.cshtml" />
     <Content Include="Areas\Business\Views\CY_KCTS\CY_KCTS.cshtml" />
     <Content Include="Areas\Business\Views\CY_WM\CY_WM.cshtml" />
+    <Content Include="Areas\Business\Views\XXYL_YDJS\XXYL_YDJS.cshtml" />
+    <Content Include="Areas\Business\Views\XXYL_YDJB\XXYL_YDJB.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
