--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -117,8 +117,11 @@
     <Compile Include="Maps\WZJY_Map.cs" />
     <Compile Include="Maps\XQJBXX_Map.cs" />
     <Compile Include="Maps\XXLB_Map.cs" />
+    <Compile Include="Maps\XXYL\XXYL_HWJBXX_Map.cs" />
+    <Compile Include="Maps\XXYL\XXYL_XYWQJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_YDJBJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_YDJSJBXX_Map.cs" />
+    <Compile Include="Maps\XXYL\XXYL_ZLAMJBXX_Map.cs" />
     <Compile Include="Maps\YHJBXX_Map.cs" />
     <Compile Include="Maps\YHSCXX_Map.cs" />
     <Compile Include="Maps\YHXX_Map.cs" />
@@ -191,8 +194,11 @@
     <Compile Include="Models\WZYJ.cs" />
     <Compile Include="Models\XQJBXX.cs" />
     <Compile Include="Models\XXLB.cs" />
+    <Compile Include="Models\XXYL\XXYL_HWJBXX.cs" />
+    <Compile Include="Models\XXYL\XXYL_XYWQJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_YDJBJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_YDJSJBXX.cs" />
+    <Compile Include="Models\XXYL\XXYL_ZLAMJBXX.cs" />
     <Compile Include="Models\YHJBXX.cs" />
     <Compile Include="Models\YHSCXX.cs" />
     <Compile Include="Models\YHXX.cs" />
