--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -108,8 +108,11 @@
     <Compile Include="PWKQ\IPWKQ_XFKGWQBLL.cs" />
     <Compile Include="PWKQ\IPWKQ_YCMPZLBLL.cs" />
     <Compile Include="PWKQ\IPWKQ_YLYJDPBLL.cs" />
+    <Compile Include="XXYL\IXXYL_HWBLL.cs" />
+    <Compile Include="XXYL\IXXYL_XYWQBLL.cs" />
     <Compile Include="XXYL\IXXYL_YDJBBLL.cs" />
     <Compile Include="XXYL\IXXYL_YDJSBLL.cs" />
+    <Compile Include="XXYL\IXXYL_ZLAMBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TianWen.XiaoZhen1Qu.Entities\TianWen.XiaoZhen1Qu.Entities.csproj">
