--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -114,9 +114,10 @@
     <Compile Include="Maps\PWKQ\PWKQ_YCMPJBXX_Map.cs" />
     <Compile Include="Maps\PWKQ\PWKQ_YLYJDPJBXX_Map.cs" />
     <Compile Include="Maps\SZMX_Map.cs" />
-    <Compile Include="Maps\WZJY_Map.cs" />
+    <Compile Include="Maps\BZZX\BZZX_WZJY_Map.cs" />
     <Compile Include="Maps\XQJBXX_Map.cs" />
     <Compile Include="Maps\XXLB_Map.cs" />
+    <Compile Include="Maps\XXYL\XXYL_DIYSGFJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_HWJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_QPZYJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_TQTJBXX_Map.cs" />
@@ -193,9 +194,10 @@
     <Compile Include="Models\PWKQ\PWKQ_YCMPJBXX.cs" />
     <Compile Include="Models\PWKQ\PWKQ_YLYJDPJBXX.cs" />
     <Compile Include="Models\SZMX.cs" />
-    <Compile Include="Models\WZYJ.cs" />
+    <Compile Include="Models\BZZX\WZYJ.cs" />
     <Compile Include="Models\XQJBXX.cs" />
     <Compile Include="Models\XXLB.cs" />
+    <Compile Include="Models\XXYL\XXYL_DIYSGFJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_HWJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_QPZYJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_TQTJBXX.cs" />
