--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -341,6 +341,7 @@
     <Content Include="Areas\Business\Css\WZCX\WZCX.css" />
     <Content Include="Areas\Business\Css\XXGL\XXGL.css" />
     <Content Include="Areas\Business\Css\XXGL\XXGLMX.css" />
+    <Content Include="Areas\Business\Css\XXYL\XXYL_DIYSGF.css" />
     <Content Include="Areas\Business\Css\XXYL\XXYL_HW.css" />
     <Content Include="Areas\Business\Css\XXYL\XXYL_QPZY.css" />
     <Content Include="Areas\Business\Css\XXYL\XXYL_TQT.css" />
@@ -494,6 +495,8 @@
     <Content Include="Areas\Business\Scripts\Business\WZCX\WZCX.js" />
     <Content Include="Areas\Business\Scripts\Business\XXGL\XXGL.js" />
     <Content Include="Areas\Business\Scripts\Business\XXGL\XXGLMX.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXYL\XXYL_DIYSGF.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXYL\XXYL_DIYSGFYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXYL\XXYL_HW.js" />
     <Content Include="Areas\Business\Scripts\Business\XXYL\XXYL_HWYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXYL\XXYL_QPZY.js" />
@@ -851,7 +854,7 @@
     <Compile Include="Areas\Business\Controllers\BaseController.cs" />
     <Compile Include="Areas\Business\Common\QRCodeHelper.cs" />
     <Compile Include="Areas\Business\Controllers\BZZX\BZZXController.cs" />
-    <Compile Include="Areas\Business\Controllers\BZZX\WZYJController.cs" />
+    <Compile Include="Areas\Business\Controllers\BZZX\BZZX_WZJYController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_GCCController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_HCController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_JCController.cs" />
@@ -907,6 +910,7 @@
     <Compile Include="Areas\Business\Controllers\WDXJController.cs" />
     <Compile Include="Areas\Business\Controllers\WZCXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXGLController.cs" />
+    <Compile Include="Areas\Business\Controllers\XXYL\XXYL_DIYSGFController.cs" />
     <Compile Include="Areas\Business\Controllers\XXYL\XXYL_HWController.cs" />
     <Compile Include="Areas\Business\Controllers\XXYL\XXYL_QPZYController.cs" />
     <Compile Include="Areas\Business\Controllers\XXYL\XXYL_TQTController.cs" />
@@ -1074,6 +1078,7 @@
     <Content Include="Areas\Business\Views\XXYL_ZLAM\XXYL_ZLAM.cshtml" />
     <Content Include="Areas\Business\Views\XXYL_TQT\XXYL_TQT.cshtml" />
     <Content Include="Areas\Business\Views\XXYL_QPZY\XXYL_QPZY.cshtml" />
+    <Content Include="Areas\Business\Views\XXYL_DIYSGF\XXYL_DIYSGF.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
